--- a/public/main.css
+++ b/public/main.css
@@ -15,6 +15,10 @@ div {
   font-size: 16px;
 }
 
+body{
+  background: white;
+}
+
 .emoji {
   font-size: 32px;
   font-family: Emoji;
@@ -168,3 +172,6 @@ button:hover{
   background: #ddd;
 }
 
+.nobr{
+  white-space: nowrap;
+}
